Give credit where credit is due

--- a/templates/poster.html
+++ b/templates/poster.html
@@ -50,6 +50,11 @@
             {% endfor %}
         </div>
 
+        <footer>
+            <small>Build for <a href="jugendhackt.org">jugendhackt</a> by Hanno Sternberg.</small><br />
+            <small>Poster based on a "Brainstormingplakat-Vorlage - CC-BY Ralph Appelt"</small>
+        </footer>
+
     </body>
 
 </html>
