--- a/templates/poster.html
+++ b/templates/poster.html
@@ -46,13 +46,14 @@
                         <div class="box arrowdown"></div>
                     </div>
                 </div>
+                <small><a href="https://{{ poster.url }}">Link zum Pad</a></small>
             </div>
             {% endfor %}
         </div>
 
         <footer>
             <small>Build for <a href="jugendhackt.org">jugendhackt</a> by Hanno Sternberg.</small><br />
-            <small>Poster based on a "Brainstormingplakat-Vorlage - CC-BY Ralph Appelt"</small>
+            <small>Poster based on "Brainstormingplakat-Vorlage - CC-BY Ralph Appelt"</small>
         </footer>
 
     </body>
