--- a/templates/poster.html
+++ b/templates/poster.html
@@ -53,7 +53,7 @@
 
         <footer>
             <small>Build for <a href="jugendhackt.org">jugendhackt</a> by Hanno Sternberg.</small><br />
-            <small>Poster based on "Brainstormingplakat-Vorlage - CC-BY Ralph Appelt"</small>
+            <small>Poster design based on "Brainstormingplakat-Vorlage - CC-BY Ralph Appelt"</small>
         </footer>
 
     </body>
